@@ -1042,6 +1042,11 @@ Specifies the directory from which the job or job step's checkpoint should
 be read (used by the checkpoint/blcrm and checkpoint/xlch plugins only).
 
 .TP
+\fB\-\-runjob\-opts\fR=<\fIoptions\fR>
+Options to the runjob command.
+For use only on IBM BlueGene/Q systems.
+
+.TP
 \fB\-s\fR, \fB\-\-share\fR
 The job allocation can share nodes with other running jobs.
 This is the opposite of \-\-exclusive, whichever option is seen last
